# passless

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  cliff.toml  config.example.toml  config.toml.example
.ci/: PKGBUILD-bin.j2  PKGBUILD.j2  demo.sh  generate-pkgbuild.rh  release.sh
.github/: copilot-instructions.md
.github/workflows/: aur-publish.yml  rust.yml
src/: authenticator.rs  config.rs  error.rs  main.rs  notification.rs
src/commands/: credential_mgmt.rs  custom.rs  mod.rs
src/storage/: local.rs  mod.rs  pass.rs
tests/: e2e_webauthn.rs
